--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  height: 100%;
   line-height: 1.5;
   font-weight: 400;
 /* 
@@ -29,6 +30,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-size: 18px;
+  position: relative;
+  background-color: #F2F2F2;
+  color: #4d4d4d;
+  height: 100%;
 }
 
 h1 {
