--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  /* padding: 2rem; */
   text-align: center;
   box-sizing: border-box;
   height: 100%;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
