--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  height: 100%;
   line-height: 1.5;
   font-weight: 400;
 /* 
@@ -24,17 +23,20 @@ a:hover {
   color: #535bf2;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
   font-size: 18px;
   position: relative;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   color: #4d4d4d;
-  height: 100%;
+
 }
 
 h1 {
