--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,35 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-color: #582e35 #bfcacf;
+  scrollbar-width: thin;
+
 }
+
+
+ ::-webkit-scrollbar {
+    width: 6px;
+} 
+
+/* Track */
+ ::-webkit-scrollbar-track {
+    background-color: white;
+} 
+
+/* Handle */
+ ::-webkit-scrollbar-thumb {
+    background-color: rgba(219, 69, 219, 0.8);
+} 
+
+/* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(29,17,138,0.6);
+} 
+
+
 
 a {
   font-weight: 500;
@@ -21,10 +49,12 @@ a {
 }
 a:hover {
   color: #535bf2;
+  
 }
 
 *{
   box-sizing: border-box;
+  
 }
 
 body {
@@ -37,6 +67,7 @@ body {
   background-color: #f2f2f2;
   color: #4d4d4d;
 
+  
 }
 
 h1 {
