--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,10 @@
 
   overflow-y: scroll;
   overflow-x: hidden;
-  scrollbar-color: #582e35 #bfcacf;
+  scrollbar-color: #57319e #bfcacf;
   scrollbar-width: thin;
+
+
 
 }
 
@@ -32,12 +34,12 @@
 
 /* Handle */
  ::-webkit-scrollbar-thumb {
-    background-color: rgba(219, 69, 219, 0.8);
+    background-color: #57319e;
 } 
 
 /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(29,17,138,0.6);
+    background-color: #6d47b4;
 } 
 
 
